--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.7.6",
     "morgan": "^1.5.0",
     "nunjucks": "*",
