--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "express": "^4.17.1",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.7.6",
-    "morgan": "^1.5.0",
-    "nunjucks": "*",
+    "morgan": "^1.9.1",
+    "nunjucks": "^3.2.0",
     "nunjucks-date-filter": "^0.1.1",
-    "request": "^2.79.0",
-    "serve-favicon": "^2.2.0",
-    "socket.io": "^1.7.2"
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
